# quad-tree

./: LICENSE  README.markdown  quad-tree.cabal
src/Data/: QuadTree.hs
src/Data/QuadTree/: BoundedPoints.hs  Box.hs  Types.hs
