name:          quad-tree
category:      quad-tree
version:       0.1
license:       BSD3
cabal-version: >= 1.10
license-file:  LICENSE
author:        Ben Gamari
maintainer:    Ben Gamari <bgamari@gmail.com
stability:     experimental
homepage:      http://github.com/bgamari/quad-tree
bug-reports:   http://github.com/bgamari/quad-tree/issues
copyright:     Copyright (C) 2014 Ben Gamari
synopsis:      Quad trees are a useful data structure for lookups within two-dimensional spatial data
description:   Quad trees are a useful data structure for lookups within two-dimensional spatial data
build-type:    Custom

extra-source-files:
  .ghci
  .gitignore
  .travis.yml
  .vim.custom
  CHANGELOG.markdown
  HLint.hs
  README.markdown
  travis/cabal-apt-install
  travis/config

source-repository head
  type: git
  location: git://github.com/ekmett/foo.git

library
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends:
    base >= 4.4 && < 5,
    semigroups >= 0.8 && < 1,
    lens >= 4.2 && < 5,
    linear >= 1.10 && < 2
  exposed-modules:
    Data.QuadTree
    Data.QuadTree.Types
    Data.QuadTree.BoundedPoints
    Data.QuadTree.Box

test-suite doctests
  type:    exitcode-stdio-1.0
  main-is: doctests.hs
  default-language: Haskell2010
  build-depends:
    base,
    directory >= 1.0,
    doctest >= 0.9.1,
    filepath
  ghc-options: -Wall -threaded
  if impl(ghc<7.6.1)
    ghc-options: -Werror
  hs-source-dirs: tests
